# YingShiXueYuan

./: .gitignore  README.md
.github/workflows/: build-mobile.yml  build.yml
backend/: Cargo.toml  pyproject.toml
backend/app/: auth.py  config.py  crud.py  excel.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: admin.py  public.py
backend/src/: auth.rs  config.rs  db.rs  error.rs  excel.rs  handlers.rs  main.rs  models.rs  push.rs  reminder.rs  seed.rs  web.rs
frontend/: index.html  package-lock.json  tailwind.config.js  vite.config.ts
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: api.ts  icons.tsx  index.css  lib.ts  main.tsx  pwa.ts
frontend/src/pages/: AdminPage.tsx  BookingPage.tsx
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts  proguard-rules.pro
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/res/values-night/: styles.xml
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: alert_engine.dart  api_client.dart  app_state.dart  background_service.dart  main.dart  models.dart  native.dart  notification_service.dart  permissions.dart  sse_client.dart  store.dart  theme.dart
mobile/lib/pages/: admins_page.dart  bookings_tab.dart  home_page.dart  keepalive_page.dart  login_page.dart  logs_page.dart  more_page.dart  overview_tab.dart  resources_page.dart  settings_page.dart  shifts_page.dart  slots_page.dart
mobile/lib/widgets/: anim.dart  ui.dart
scripts/: build-exe.sh
(+11 files in other folders)
