[package]
name = "yingshi-booking-backend"
version = "0.1.0"
edition = "2021"
description = "录音实验室预约系统后端（Rust 重写，单文件可执行）"

[[bin]]
name = "yingshi-booking"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rust-embed = "8"
mime_guess = "2"
rust_xlsxwriter = "0.64"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
