[project]
name = "yingshi-booking-backend"
version = "0.1.0"
description = "录音实验室预约系统后端 API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7.0",
    "openpyxl>=3.1.2",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.9",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"
